HAWKULAR-803 Prelim - first commit of context chart until fully responsive and metrics capabiltiy to return start of metrics collection period. Chart part  commented out until other things are resolved with metrics colleciton period and fully responsive charts that aren't reliant upon  different aspect ratios to allow full alignment at various responsive sizes.

--- a/console/src/main/scripts/plugins/metrics/less/metrics.less
+++ b/console/src/main/scripts/plugins/metrics/less/metrics.less
@@ -403,7 +403,6 @@ a:hover {
 
   .hk-graph-container  {
     margin: 0 auto;
-    //width: 750px;
 
     &.hk-graph-availability svg { /* top 40px, bottom 30px, align center */
       margin-bottom: -18px;
@@ -412,7 +411,6 @@ a:hover {
     }
 
     &.hk-graph-metrics {
-      //height: 262px;
 
       svg {
         margin-bottom: -13px;
@@ -422,7 +420,6 @@ a:hover {
     }
 
     &.hk-graph-jvm {
-      //height: 262px;
 
       svg {
         margin-bottom: -13px;
@@ -430,6 +427,11 @@ a:hover {
         margin-top: -14px;
       }
     }
+  }
+
+  .hk-context-graph-container {
+    margin: 0 auto;
+    height: 110px;
   }
 
   .hk-spinner-container {
